updated font search

--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
 	
 	<nav class="navsection">
 		<div class="minornav">
-			<p class="navitem">
-				Search Fonts
-			</p>
+			<input id="searchInput" type="text" class="navitem" placeholder="Search Fonts">
 			<hr>
 			<input id="textInput" type="text" class="navitem" placeholder="Type something">
 			<hr>
